--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -222,10 +222,11 @@
 
 /////////////// CREATE POST ////////////////////
 .postForm {
-  // width: 550px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
   gap: 5px;
+
   .postTitle {
   }
   .postSummary {
