--- a/client/src/styles/main.module.css
+++ b/client/src/styles/main.module.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 .mainContainer {
   padding-top: 100px;
-  margin: 0 100px;
+  margin: 0 90px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,7 +11,7 @@
 
 .navBar {
   color: #5b5a5a;
-  height: 50px;
+  height: 60px;
   display: flex;
   border: solid 1px black;
   justify-content: space-between;
@@ -19,16 +19,45 @@
   position: fixed;
   width: 100vw;
 }
+.navBar a {
+  cursor: pointer;
+}
 
 .logo {
+  font-size: 20px;
   font-weight: 600;
   margin-left: 40px;
 }
 
 .nav {
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 50px;
-  gap: 50px;
+}
+.nav .nav1 {
+  margin-right: 20px;
+}
+.nav .nav2 {
+  margin-right: 1px;
+}
+.nav .nav4 {
+  padding-left: 5px;
+}
+
+.loginIcon {
+  border-radius: 50px;
+  background-color: #26798e;
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-weight: 600;
+  margin-right: 5px;
+  padding-bottom: 2px;
 }
 
 .posts {
@@ -37,6 +66,7 @@
   place-items: center;
   gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  justify-content: center;
 }
 .posts .post {
   border: solid 1px black;
@@ -120,8 +150,19 @@
     margin: 0 20px;
   }
   .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50px;
+  }
+  .nav .nav1 {
     margin-right: 20px;
-    gap: 20px;
+  }
+  .nav .nav2 {
+    margin-right: 1px;
+  }
+  .nav .nav4 {
+    padding-left: 5px;
   }
   .posts .post {
     grid-template-columns: inherit;
@@ -140,7 +181,7 @@
     line-height: 17.5px;
   }
   .posts .post .postContents .postWriting {
-    line-height: 15px;
+    line-height: 18px;
   }
   .posts .post .info {
     font-size: 12px;
