--- a/client/src/styles/main.module.css
+++ b/client/src/styles/main.module.css
@@ -10,10 +10,11 @@
 }
 
 .navBar {
+  z-index: 1;
   color: #5b5a5a;
+  background-color: rgba(205, 239, 247, 0.6196078431);
   height: 60px;
   display: flex;
-  border: solid 1px black;
   justify-content: space-between;
   align-items: center;
   position: fixed;
