--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -10,10 +10,12 @@
   justify-content: center;
 }
 .navBar {
+  z-index: 1;
   color: #5b5a5a;
+  background-color: #cdeff79e;
   height: 60px;
   display: flex;
-  border: solid 1px black;
+  // border: solid 1px black;
   justify-content: space-between;
   align-items: center;
   position: fixed;
