--- a/client/src/styles/card.module.css
+++ b/client/src/styles/card.module.css
@@ -5,14 +5,18 @@
   color: #2e2d31;
   background: #131313;
   overflow: hidden;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .temporary_text {
-  font-weight: bold;
-  font-size: 24px;
-  padding: 6px 12px;
+  /* padding: 6px 12px; */
   color: #f8f8f8;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  img {
+  }
 }
 
 .card_title {
@@ -73,4 +77,24 @@
 .card:hover .card_description {
   opacity: 1;
   transition-delay: 0.25s;
+}
+
+@media screen and (max-width: 500px) {
+  .card {
+    width: 290px;
+    height: 230px;
+  }
+  .card_title {
+    line-height: 15px;
+    max-height: 30px;
+    overflow-y: scroll;
+  }
+  .card_content::before {
+    content: "";
+    position: absolute;
+    top: -0px;
+    transform: rotate(-175deg);
+    border-radius: 50%;
+    box-shadow: inset 48px 48px #f2f2f2;
+  }
 }
