--- a/client/src/styles/card2.module.css
+++ b/client/src/styles/card2.module.css
@@ -7,6 +7,9 @@
   transition: 0.2s ease-in-out;
 }
 
+.imgContainer {
+  position: relative;
+}
 .img {
   width: 100%;
   height: 50%;
@@ -19,6 +22,8 @@
 }
 
 .save {
+  position: absolute;
+  border: solid 1px black;
   transition: 0.2s ease-in-out;
   border-radius: 10px;
   margin: 20px;
