renewed register and login page

--- a/client/src/styles/main.module.css
+++ b/client/src/styles/main.module.css
@@ -47,10 +47,11 @@
 }
 
 .loginIcon {
+  font-size: 15px;
   border-radius: 50px;
   background-color: #26798e;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   color: #fff;
   display: flex;
   align-items: center;
