--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -49,10 +49,11 @@
 }
 //////////// Login Icon //////////////
 .loginIcon {
+  font-size: 15px;
   border-radius: 50px;
   background-color: #26798e;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   color: #fff;
   display: flex;
   align-items: center;
