--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -52,21 +52,21 @@
 //   }
 // }
 //////////// Login Icon //////////////
-.loginIcon {
-  font-size: 15px;
-  border-radius: 50px;
-  background-color: #26798e;
-  width: 35px;
-  height: 35px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-weight: 600;
-  margin-right: 5px;
-  padding-bottom: 2px;
-}
+// .loginIcon {
+//   font-size: 15px;
+//   border-radius: 50px;
+//   background-color: #da8dea;
+//   width: 35px;
+//   height: 35px;
+//   color: #fff;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   text-align: center;
+//   font-weight: 600;
+//   margin-right: 5px;
+//   padding-bottom: 2px;
+// }
 
 // .posts {
 //   // border: solid 1px black;
