--- a/client/src/styles/main.module.css
+++ b/client/src/styles/main.module.css
@@ -1,7 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.postTitle {
+  font-family: "REM", sans-serif;
+}
+
+.postAuthor {
+  font-family: "REM", sans-serif;
+}
+
 .contentBox p {
-  font-size: 50px;
+  font-family: "REM", sans-serif;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 300;
 }
 /*# sourceMappingURL=main.module.css.map */
