added bg image on login page and added logo

--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+  font-family: "REM", sans-serif;
+}
 
 .postTitle {
   font-family: "REM", sans-serif;
