--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+* {
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: "REM", sans-serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -7,8 +8,12 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  font-family: sans-serif;
   text-decoration: none;
   margin: 0;
   padding: 0;
+}
+@import url("https://fonts.googleapis.com/css2?family=REM:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+body {
+  font-family: "REM", sans-serif;
 }
